@@ -1,6 +1,8 @@
 package com.example.cst8334project.calendar;
 
 
+import android.app.DatePickerDialog;
+import android.app.TimePickerDialog;
 import android.content.Intent;
 import android.os.Bundle;
 import android.provider.CalendarContract;
@@ -10,6 +12,7 @@ import android.view.View;
 import android.widget.Button;
 import android.widget.DatePicker;
 import android.widget.EditText;
+import android.widget.TextView;
 import android.widget.TimePicker;
 
 import com.example.cst8334project.BaseActivity;
@@ -17,26 +20,30 @@ import com.example.cst8334project.MainMenu;
 import com.example.cst8334project.R;
 import com.example.cst8334project.VolunteerInfoActivity;
 
+import java.sql.Time;
+import java.text.Format;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Calendar;
 import java.util.Date;
+import java.util.Formatter;
+import java.util.Locale;
 
-//import android.provider.CalendarContract;
+import static com.example.cst8334project.forms.util.FormUtils.TIME_FORMAT;
 
 public class CalendarActivity extends BaseActivity {
 
-    private TimePicker timePicker1;
-    private DatePicker datePicker;
     private EditText location;
     private EditText title;
     private EditText duration;
     private EditText description;
+
+    private int aptMinute, aptHour, aptDay, aptMonth, aptYear;
+
     private boolean eventCreated = false;
 
     private Button createEvent;
-    private static final int MY_PERMISSIONS_REQUEST_WRITE_CALENDAR = 1;
     protected static final String ACTIVITY_NAME = "CalendarActivity";
-
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -46,14 +53,66 @@ public class CalendarActivity extends BaseActivity {
 
         setupDrawer();
 
-        timePicker1 = findViewById(R.id.timePicker1);
-        datePicker = findViewById(R.id.datePicker1);
-        location = findViewById(R.id.location);
-        title = findViewById(R.id.type);
-        duration = findViewById(R.id.duration);
-        description = findViewById(R.id.description);
+        location = findViewById(R.id.cal_location);
+        title = findViewById(R.id.apt_type);
+        duration = findViewById(R.id.cal_duration);
+        description = findViewById(R.id.cal_desc);
+        createEvent = findViewById(R.id.btn_create_event);
 
-        createEvent = findViewById(R.id.create_event);
+        final Calendar calendar = Calendar.getInstance();
+
+        final TextView editDate = findViewById(R.id.cal_date);
+
+        final int day = calendar.get(Calendar.DAY_OF_MONTH);
+        final int month = calendar.get(Calendar.MONTH);
+        final int year = calendar.get(Calendar.YEAR);
+
+        editDate.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                DatePickerDialog datePickerDialog = new DatePickerDialog(CalendarActivity.this, new DatePickerDialog.OnDateSetListener() {
+                    @Override
+                    public void onDateSet(DatePicker view, int year, int month, int dayOfMonth) {
+                        aptDay = dayOfMonth;
+                        aptMonth = month;
+                        aptYear = year;
+
+                        String formattedDate = String.format(Locale.US, "%d/%02d/%02d", year, month + 1, dayOfMonth);
+                        editDate.setText(formattedDate);
+                    }
+                }, year, month, day);
+
+                datePickerDialog.show();
+            }
+        });
+
+        final EditText editTime = findViewById(R.id.cal_time);
+
+        editTime.setOnClickListener(new View.OnClickListener() {
+
+            int currentHour = calendar.get(Calendar.HOUR_OF_DAY);
+            int currentMinutes = calendar.get(Calendar.MINUTE);
+
+            @Override
+            public void onClick(View v) {
+                TimePickerDialog timePickerDialog = new TimePickerDialog(CalendarActivity.this, new TimePickerDialog.OnTimeSetListener() {
+                    @Override
+                    public void onTimeSet(TimePicker view, int hourOfDay, int minute) {
+                        aptMinute = minute;
+                        aptHour = hourOfDay;
+                        editTime.setText(String.format(Locale.ENGLISH, TIME_FORMAT, aptHour, aptMinute));
+
+                        Time time = new Time(aptHour, aptMinute, 0);
+                        Format formatter = new SimpleDateFormat("h:mm a", Locale.US);
+                        String timeText = formatter.format(time);
+                        editTime.setText(timeText);
+                    }
+                }, currentHour, currentMinutes, false);
+
+                timePickerDialog.show();
+            }
+        });
+
         createEvent.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View View) {
@@ -91,21 +150,15 @@ public class CalendarActivity extends BaseActivity {
 
         Integer endTime;
         try {
-            endTime = new Integer(duration.getText().toString());
+            endTime = Integer.valueOf(duration.getText().toString());
         } catch (Exception e) {
             endTime = 1;
         }
 
-        int day = datePicker.getDayOfMonth();
-        int month = datePicker.getMonth();
-        int year = datePicker.getYear();
-        int hour = timePicker1.getCurrentHour();
-        int min = timePicker1.getCurrentMinute();
-
 
         Date dtstart;
-        SimpleDateFormat sdf = new SimpleDateFormat("dd-M-yyyy hh:mm:ss");
-        String dateInString = day + "-" + month + "-" + year + " " + hour + ":" + min + ":00";  //"31-08-1982 10:20:56";
+        SimpleDateFormat sdf = new SimpleDateFormat("dd-M-yyyy hh:mm:ss", Locale.US);
+        String dateInString = aptDay + "-" + aptMonth + "-" + aptYear + " " + aptHour + ":" + aptMinute + ":00";  //"31-08-1982 10:20:56";
         try {
             dtstart = sdf.parse(dateInString);
         } catch (ParseException p) {
